# AetherOS

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  MIGRATION.md  Makefile  README.md
.claude/agents/: aether-kernel.md  aurora-integration.md  docs-writer.md  nebula-ui.md  team-lead.md  test-runner.md
.github/workflows/: forge_ci.yml  repo_guard.yml
aether_init/: boot_aether.sh  build_initramfs.sh  init  upgrade_forge.sh
docs/: AURORA_CFC_INTEGRATION_BOUNDARY.md  DEMO.md  MYOS_IMPORT_INVENTORY.md  QUICKSTART.md  THE_FORGE.md  V0_DEFINITION.md  V0_MILESTONE_CHECKLIST.md  aether_roadmap.md  ai_substrate.md  build_toolchain.md  inventory.md  original_status.md  the_forge_architecture.md
docs/aether_os/: SESSION_SUMMARY.md
forge/: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  test_network.sh  test_persistent_storage.sh
forge/aetherd/: Cargo.toml
forge/architect/: generate_machines.py
forge/aurorad/: Cargo.toml
forge/brain/: brain_server.py
forge/cfcd/: __init__.py  cfcd_server.py  (+7 more)
forge/nebula-fb/: Cargo.toml
forge/nebula-fb/src/: audio.rs  brain_client.rs  fb.rs  input.rs  layout.rs  main.rs  renderer.rs  scene.rs  telemetry.rs  text.rs  theme.rs
forge/nebula-fb/src/scenes/: boot_splash.rs  dashboard.rs  mod.rs  setup.rs
forge/nebula-fb/src/widgets/: button.rs  card.rs  chart.rs  mod.rs  progress.rs  status_bar.rs  text_input.rs
nebula/: Cargo.toml  DESIGN.md
nebula/src/: canvas.rs  color.rs  facet.rs  input.rs  main.rs  omnibar.rs  render.rs
the_forge_original/: .gitignore  CHANGELOG.md  README.md  entrypoint.sh  start.sh  test_interactive_network.sh
tools/: build_initramfs.sh  check_deps.sh  fix_verify.sh  forge_smoke.sh  run_demo_stub.sh  run_qemu.sh
(+189 files in other folders)
