[package]
name = "nebula-fb"
version = "0.3.0"
edition = "2021"
description = "Nebula — AetherOS framebuffer GUI shell"

[[bin]]
name = "nebula-fb"
path = "src/main.rs"

[dependencies]
tiny-skia = "0.11"
fontdue = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
nix = { version = "0.29", features = ["ioctl", "mman", "term", "event"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
